--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@types/jest": "^26.0.4",
+    "@types/leaflet": "^1.9.8",
     "@types/leaflet.heat": "^0.2.4",
     "@types/react-leaflet-markercluster": "^3.0.4",
     "jest": "^29.7.0",
